--- a/_examples/redis_broker_presence/index.html
+++ b/_examples/redis_broker_presence/index.html
@@ -16,46 +16,46 @@
 
             const channel = "chat:index";
 
-            let centrifuge;
-
             window.addEventListener('load', async function() {
                 const input = document.getElementById("input");
                 const container = document.getElementById('messages');
 
                 // centrifuge = new Centrifuge('ws://' + window.location.host + '/connection/websocket', {});
-                centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket', {});
+                const centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket', {});
 
                 centrifuge.on('state', function (ctx) {
                     drawText('State: ' + ctx.oldState + ' -> ' + ctx.newState);
                 });
 
                 centrifuge.on('connecting', function(ctx) {
-                    drawText('Connecting: ' + ctx.code + ' (' + ctx.reason + ')');
+                    drawText('Connecting: code ' + ctx.code + ' (' + ctx.reason + ')');
                     input.setAttribute('disabled', 'true');
                 });
 
-                centrifuge.on('connected', function(ctx){
+                centrifuge.on('connected', function(ctx) {
                     drawText('Connected with client ID ' + ctx.client + ' over ' + ctx.transport);
                     input.removeAttribute("disabled");
                 });
 
-                centrifuge.on('disconnected', function(ctx){
+                centrifuge.on('disconnected', function(ctx) {
                     drawText('Disconnected: ' + ctx.code + ' (' + ctx.reason + ')');
                     input.setAttribute('disabled', 'true');
                 });
 
                 centrifuge.on('publication', handlePublication);
+                centrifuge.on('join', handleJoin);
+                centrifuge.on('leave', handleLeave);
 
                 centrifuge.on('subscribed', function (ctx) {
-                    drawText('Subscribed on channel ' + ctx.channel + ' server-side (recovered: ' + ctx.recovered + ')');
+                    drawText('Subscribed on server-side channel ' + ctx.channel + ' (recovered: ' + ctx.recovered + ')');
                 });
 
                 centrifuge.on('subscribing', function (ctx) {
-                    drawText('Subscribing on channel ' + ctx.channel);
+                    drawText('Subscribing on server-side channel ' + ctx.channel);
                 });
 
                 centrifuge.on('unsubscribed', function (ctx) {
-                    drawText('Unsubscribed from channel ' + ctx.channel);
+                    drawText('Unsubscribed from server-side channel ' + ctx.channel);
                 });
 
                 centrifuge.on('error', function (ctx) {
@@ -65,15 +65,15 @@
                 // create new subscription on a channel and bind various event listeners.
                 const sub = centrifuge.newSubscription(channel)
                         .on('state', handleState)
-                        .on('publication', handlePublication)
-                        .on("join", handleJoin)
-                        .on("leave", handleLeave)
                         .on("subscribing", handleSubscribing)
                         .on("subscribed", handleSubscribed)
                         .on("unsubscribed", handleUnsubscribed)
+                        .on('publication', handlePublication)
+                        .on("join", handleJoin)
+                        .on("leave", handleLeave)
                         .on("error", handleSubscriptionError);
 
-                // Start subscribing, subscription request will be queued until client connects to a server.
+                // Start subscribing, subscription request will be queued until client connected.
                 sub.subscribe();
 
                 // function resubscribe() {
@@ -87,7 +87,7 @@
                 //     }, 2000);
                 // }
                 // resubscribe();
-
+                //
                 // function reconnect() {
                 //     setTimeout(function () {
                 //         centrifuge.disconnect();
@@ -108,17 +108,17 @@
                     drawText('Subscription state ' + ctx.channel + ': ' + ctx.oldState + ' -> ' + ctx.newState);
                 }
 
-                function handleSubscribing(ctx) {
-                    drawText('Subscribing on channel ' + ctx.channel);
-                }
-
                 function handleSubscribed(ctx) {
                     drawText('Subscribed on channel ' + ctx.channel + ' (recovered: ' + ctx.recovered + ')');
                     showPresence(sub);
                 }
 
+                function handleSubscribing(ctx) {
+                    drawText('Subscribing on channel ' + ctx.channel + ', code ' + ctx.code + ' (' + ctx.reason + ')');
+                }
+
                 function handleUnsubscribed(ctx) {
-                    drawText('Unsubscribed from channel ' + ctx.channel);
+                    drawText('Unsubscribed from channel ' + ctx.channel + ', code ' + ctx.code + ' (' + ctx.reason + ')');
                 }
 
                 function handleSubscriptionError(ctx) {
@@ -137,12 +137,12 @@
                     drawText(text);
                 }
 
-                function handleJoin(message) {
-                    drawText('Client joined channel ' + this.channel + ' (uid ' + message.info["client"] + ', user '+ message.info["user"] +')');
+                function handleJoin(ctx) {
+                    drawText('Client joined channel ' + ctx.channel + ' (uid ' + ctx.info["client"] + ', user '+ ctx.info["user"] +')');
                 }
 
-                function handleLeave(message) {
-                    drawText('Client left channel ' + this.channel + ' (uid ' + message.info["client"] + ', user '+ message.info["user"] +')');
+                function handleLeave(ctx) {
+                    drawText('Client left channel ' + ctx.channel + ' (uid ' + ctx.info["client"] + ', user '+ ctx.info["user"] +')');
                 }
 
                 function showPresence(sub) {
